[package]
name = "gold-pass-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["json", "serde_json"] }
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
serenity = { version = "0.11.6", features = ["cache"] }
tokio = { version = "1.29.1", features = ["rt", "macros"] }
