[package]
name = "gold-pass-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.6.0"
chrono = "0.4.26"
reqwest = { version = "0.11.18", default_features = false, features = ["json", "serde_json", "rustls-tls"] }
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
serenity = { version = "0.11.6", features = ["cache"] }
tokio = { version = "1.33.0", default_features = false, features = ["rt", "macros"] }
tracing = { version = "0.1.37", features = ["async-await"] }
tracing-subscriber = "0.3.17"
rust_xlsxwriter = { version = "0.44" }
prometheus = { version = "0.13.3" }
aws-creds = { version = "0.36.0", default_features = false, features = ["http-credentials", "rustls-tls"]}
rust-s3 = { version = "0.33.0", default_features = false, features = [ "tokio", "tokio-rustls-tls", "no-verify-ssl"] }
